# googly-eyes

./: .env  README.md  docker-compose.yml  example.py  pyproject.toml  pyproject_backend.toml  pyproject_frontend.toml
.github/workflows/: backend.yml  googly-eyes-ci-tests.yml
config/: config.yml
googly_eyes/backend/: Dockerfile  server.py
googly_eyes/backend/lib/BlazeFace/: __init__.py  blazeface_constants.py  blazeface_detector.py  blazeface_utils.py
googly_eyes/backend/lib/FaceMesh/: __init__.py  facemesh_landmarks.py  facemesh_utils.py
googly_eyes/backend/lib/GooglyEyes/: __init__.py  googlify.py  googlyeyes_constants.py
googly_eyes/backend/lib/TFLite/: __init__.py  tflite.py
googly_eyes/backend/lib/utils/: image_utils.py  io_utils.py
googly_eyes/backend/models/blazeface/: face_detection_back_256x256_float16_quant.tflite
googly_eyes/backend/models/facemesh/: face_landmark.tflite
googly_eyes/frontend/: Dockerfile  view.py
tests/backend/: test_blazeface_detector.py  test_facemesh_landmarks.py  test_googlify_eyes.py  test_image_utils.py  test_io_utils.py  test_server.py  test_tflite.py
tests/frontend/: test_view.py
tests/performance/: test_load.py
